# pyoptimal

./: INSTALL.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  pyoptimal  pyproject.toml
examples/: api_example.py  compare_algorithms.py  complex_ot.yaml  latex_example.py  simple_hg.yaml  simple_ot.yaml  tableau_example.py  tableau_with_latex.yaml  zongdi_example.yaml
src/pyoptimal/: __init__.py  candidate.py  cli.py  grammar.py  hg.py  learner.py  ot.py  tableau.py  utils.py
tests/: __init__.py  test_candidate.py  test_grammar.py  test_learner.py  test_tableau.py
